--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "browserify": "^10.2.4",
     "gulp": "^3.9.0",
+    "gulp-develop-server": "^0.4.3",
+    "gulp-livereload": "^3.8.0",
     "gulp-sass": "^2.0.1",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
