--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "browserify": "^10.2.4",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
     "gulp-develop-server": "^0.4.3",
     "gulp-livereload": "^3.8.0",
     "gulp-sass": "^2.0.1",
